Initial commit with WAR and Dockerfile